fix: modal alignment changes(transaction successful)

--- a/frontend/src/Home.module.css
+++ b/frontend/src/Home.module.css
@@ -20,3 +20,13 @@
   }
   
   
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 4; /* Set z-index lower than the selected card */
+    backdrop-filter: blur(8px); /* Apply blur effect */
+  }
